package progra2.utn.uml.domain.cuentabanco;

public class ClaveSeguridad {
}
